--- a/_layouts/404.html
+++ b/_layouts/404.html
@@ -19,6 +19,5 @@ layout: default
 <div class="container">
   <h1>404</h1>
 
-  <p><strong>Page not found :(</strong></p>
-  <p>Try to check other pages through the menu. </p>
+  <p><strong><big>Ceci n'est pas une page.</big></strong></p>
 </div>
