--- a/_layouts/404.html
+++ b/_layouts/404.html
@@ -17,7 +17,8 @@ layout: default
 </style>
 
 <div class="container">
-  <h1>404</h1>
-
-  <p><strong><big>Ceci n'est pas une page.</big></strong></p>
+  <center>
+    <h1>404</h1>
+    <p><strong><big>Ceci n'est pas une page.</big></strong></p>
+  </center>
 </div>
