--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -35,7 +35,7 @@ $brand-color: map-get($brand-colors, "orangered");
 
 @font-face {
   font-family: "Volkorn";
-  src: url("../assets/fonts/Volkorn-Regular.tff");
+  src: url("/assets/fonts/Volkorn-Regular.tff");
 }
 
 @import "yat";
