--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -4,7 +4,7 @@
 
 @font-face {
   font-family: "Volkorn";
-  src: url("/assets/fonts/Volkorn-Regular.tff");
+  src: url("../assets/fonts/Volkorn-Regular.tff");
 }
 
 // Default theme colors
