--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -38,4 +38,4 @@ $brand-color: map-get($brand-colors, "orangered");
   $brand-color: {{ site.brand_color | default: '#ff5100' }};
 }
 
-@import "theme";
+@import "yat";
