--- a/_sass/yat.scss
+++ b/_sass/yat.scss
@@ -9,9 +9,9 @@
 
 @font-face {
     font-family: 'Volkorn';
-    src: url('/fonts/Volkorn.woff2') format("woff2"),
-    	 url('/fonts/Volkorn.woff') format("woff"),
-    	 url('/fonts/Volkorn.ttf') format("truetype");
+    src: url('/fonts/Vollkorn-Regularwoff2') format("woff2"),
+    	 url('/fonts/Vollkorn-Regular.woff') format("woff"),
+    	 url('/fonts/Vollkorn-Regular.ttf') format("truetype");
 }
   
 $FL: 'GoudyInitialen', 'Nimbus Roman', !default;
