--- a/_sass/yat.scss
+++ b/_sass/yat.scss
@@ -18,7 +18,7 @@ $FL: 'GoudyInitialen', 'Nimbus Roman', !default;
 
 // Define defaults for each variable.
 
-$base-font-family: "Volkorn", Helvetica, Arial, Oswald, sans-serif, !default;
+$base-font-family: "Volkorn", 'Nimbus Roman', Helvetica, Arial, Oswald, sans-serif, !default;
 $base-font-size: 14px !default;
 $base-font-weight: 400 !default;
 $small-font-size:  $base-font-size * 0.875 !default;
