--- a/_sass/yat.scss
+++ b/_sass/yat.scss
@@ -4,14 +4,14 @@
     font-family: 'GoudyInitialen';
     src: url('../assets/fonts/subset-GoudyInitialen.woff2') format("woff2"),
     	 url('../assets/fonts/subset-GoudyInitialen.woff') format("woff"),
-    	 url('../assets/fonts/GoudyInitialen.ttf') format("truetype");
+    	 url('../../assets/fonts/GoudyInitialen.ttf') format("truetype");
 }
 
 @font-face {
     font-family: 'Volkorn';
     src: url('../assets/fonts/Vollkorn-Regularwoff2') format("woff2"),
     	 url('../assets/fonts/Vollkorn-Regular.woff') format("woff"),
-    	 url('../assets/fonts/Vollkorn-Regular.ttf') format("truetype");
+    	 url('../../assets/fonts/Vollkorn-Regular.ttf') format("truetype");
 }
   
 $FL: 'GoudyInitialen', 'Nimbus Roman', !default;
