--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -5,11 +5,11 @@
     font-family: 'GoudyInitialen';
     src: url('../assets/fontssubset-GoudyInitialen.woff2') format("woff2"),
     	 url('../assets/fontssubset-GoudyInitialen.woff') format("woff"),
-    	 url('../assets/fontsGoudyInitialen.ttf') format("truetype");
+    	 url('../../assets/fontsGoudyInitialen.ttf') format("truetype");
 }
 @font-face {
   font-family: "Volkorn";
-  src: url("/assets/fonts/Volkorn-Regular.tff") format("truetype");
+  src: url("../..//assets/fonts/Volkorn-Regular.tff") format("truetype");
 }
 
 // Default theme colors
