--- a/_includes/extensions/theme-toggle.html
+++ b/_includes/extensions/theme-toggle.html
@@ -3,8 +3,8 @@
   <label for="theme-switch">
     <div class="toggle"></div>
     <div class="names">
-      <p class="light">Light</p>
-      <p class="dark">Dark</p>
+      <p class="light"><span style="font-family:Helvetica;">Light</span></p>
+      <p class="dark"><span style="font-family:Helvetica;">Dark</span></p>
     </div>
   </label>
 </div>
