--- a/_sass/yat.scss
+++ b/_sass/yat.scss
@@ -16,7 +16,7 @@
   
 p {
   width: 365px;
-  line-height: 1.25;
+  line-height: 1.5;
   font-family: 'Nimbus Roman';
 }
 
@@ -24,6 +24,7 @@ h2 + p::first-letter {
  line-height: 0.85em;
   font-size: 10em;
   font-family: 'GoudyInitialen';
+  margin-right: 6px;
   float: left;
 }
 
@@ -33,7 +34,7 @@ $base-font-family: 'Vollkorn', Helvetica, Arial, Oswald, sans-serif, !default;
 $base-font-size: 15px !default;
 $base-font-weight: 400 !default;
 $small-font-size:  $base-font-size * 0.875 !default;
-$base-line-height: 1.25 !default;
+$base-line-height: 1.5 !default;
 
 $spacing-unit:     30px !default;
 
