--- a/_sass/yat.scss
+++ b/_sass/yat.scss
@@ -15,13 +15,13 @@
 }
   
 p {
-  width: 365px;
-  line-height: 1.6;
+  word-wrap: break-word;
+  line-height: 1.65;
   font-family: 'Nimbus Roman';
 }
 
 h2 + p::first-letter {
- line-height: 0.875em;
+ line-height: 0.88em;
   font-size: 10em;
   font-family: 'GoudyInitialen';
   margin-right: 7px;
@@ -34,7 +34,7 @@ $base-font-family: 'Vollkorn', Helvetica, Arial, Oswald, sans-serif, !default;
 $base-font-size: 15px !default;
 $base-font-weight: 400 !default;
 $small-font-size:  $base-font-size * 0.875 !default;
-$base-line-height: 1.6 !default;
+$base-line-height: 1.65 !default;
 
 $spacing-unit:     30px !default;
 
