--- a/_layouts/about.html
+++ b/_layouts/about.html
@@ -1,8 +1,7 @@
 ---
-layout: home
-title: ''
-header: "About"
-subheader: "Nowhere's virtues are virtually nowhere today. Who will overthrow themselves imperceptibly, without superficial appearances, sans measurement? Who will continue to create beyond all which increases their valuation? We take this creative impulse wild and free from the reactive logic within economies of optics and metrics, to pure unfettered and invisible activity of the highest power."
+layout: articles
+heading: "About"
+subheading: "Nowhere's virtues are virtually nowhere today. Who will overthrow themselves imperceptibly, without superficial appearances, sans measurement? Who will continue to create beyond all which increases their valuation? We take this creative impulse wild and free from the reactive logic within economies of optics and metrics, to pure unfettered and invisible activity of the highest power."
 permalink: /about/
 ---
 
