--- a/_sass/yat.scss
+++ b/_sass/yat.scss
@@ -13,7 +13,14 @@
     	 url('../../assets/fonts/Vollkorn-Regular.woff') format("woff"),
     	 url('../../assets/fonts/Vollkorn-Regular.ttf') format("truetype");
 }
-  
+
+@font-face {
+    font-family: 'Magritte';
+    src: url('../../assets/fonts/Parisienne-Regular.woff2') format("woff2"),
+    	 url('../../assets/fonts/Parisienne-Regular.woff') format("woff"),
+    	 url('../../assets/fonts/Parisienne-Regular.ttf') format("truetype");
+}
+
 p {
   word-wrap: break-word;
   line-height: 1.65;
