--- a/_sass/yat.scss
+++ b/_sass/yat.scss
@@ -29,6 +29,7 @@ p {
 
 h2 + p::first-letter {
  margin-top: -.01em;
+ padding: 0;
  line-height: 0.85em;
   font-size: 10em;
   font-family: 'GoudyInitialen';
