--- a/_sass/yat.scss
+++ b/_sass/yat.scss
@@ -42,6 +42,27 @@
     	 url('../../assets/fonts/Vintage Decorative Signs 3.ttf') format("truetype");
 }
 
+@font-face {
+    font-family: 'Arabesque';
+    src: url('../../assets/fonts/Arabesques.woff2') format("woff2"),
+    	 url('../../assets/fonts/Arabesques.woff') format("woff"),
+    	 url('../../assets/fonts/Arabesques.ttf') format("truetype");
+}
+
+@font-face {
+    font-family: 'oorn';
+    src: url('../../assets/fonts/old ornaments.woff2') format("woff2"),
+    	 url('../../assets/fonts/old ornaments.woff') format("woff"),
+    	 url('../../assets/fonts/old ornaments.ttf') format("truetype");
+}
+
+@font-face {
+    font-family: 'englekna';
+    src: url('../../assets/fonts/ENGLEKNA.woff2') format("woff2"),
+    	 url('../../assets/fonts/ENGLEKNA.woff') format("woff"),
+    	 url('../../assets/fonts/ENGLEKNA.ttf') format("truetype");
+}
+
 p {
   word-wrap: break-word;
   //width: 500px;
@@ -69,6 +90,19 @@ h1 + p::first-letter {
   font-family: 'Pictoglyph', 'Nimbus Roman';
   margin-right: 4px;
   float: left;
+}
+
+h3 {font-family: 'Vollkorn','Nimbus Roman';}
+
+h3 + p::first-letter {
+ margin-top: 0.11em;
+ line-height: 0.85;
+  font-size: 5em;
+  //color: red;
+  font-family: 'Arabesque', 'Nimbus Roman';
+  margin-right: 4px;
+  float: left;
+  text-indent:0px;
 }
 
 // Define defaults for each variable.
